refactor: reorganize project into multi-module maven structure