@@ -1,7 +1,6 @@
 -Dfile.encoding=UTF-8
 -XX:+EnableDynamicAgentLoading
 -Xshare:off
---enable-preview
 --enable-native-access=ALL-UNNAMED
 --sun-misc-unsafe-memory-access=allow
 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
